[workspace.package]
version = "0.1.1"
edition = "2024"
publish = false
license = "Apache-2.0"
repository = "https://github.com/leptos-rs/leptos-lints"

[workspace]
members = [
    "tests",

    # leptos_more_lints
    "lints/leptos-more",
    "lints/leptos-more/leptos_*",
    "lints/leptos-more/leptos_*/tests/*mock",

    # web_sys_lints
    "lints/web-sys",
    "lints/web-sys/web_sys_*",
    "lints/web-sys/web_sys_*/tests/*mock",
]
resolver = "3"

[workspace.dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "0450db33a5d8587f7c1d4b6d233dac963605766b" }
dylint_linting = "4.1.0"
dylint_testing = "4.1.0"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
print_stdout = "deny"
too_many_lines = "allow"

[workspace.lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]
