[package]
name = "leptos_reexports"
authors = ["Álvaro Mondéjar Rubio"]
description = "Check for usages of third party library re-exports from leptos."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "leptos_reexports_use_and_path"
path = "tests/ui/use_and_path.rs"

[dependencies]
clippy_utils.workspace = true
dylint_linting.workspace = true

[dev-dependencies]
dylint_testing.workspace = true
leptos = { path = "./tests/leptos_mock"}

[package.metadata.rust-analyzer]
rustc_private = true

[features]
rlib = ["dylint_linting/constituent"]

[lints]
workspace = true
